# Incremental_DuDe_ROS

./: CMakeLists.txt  CMakeLists_linked_lib.txt  README.md  package.xml
cmake_modules/: FindMPFR.cmake
include/: Graph.cpp  Graph.hpp  inc_decomp.cpp  inc_decomp.hpp  wrapper.cpp  wrapper.hpp
launch/: exploration_hospital.launch  frontier_exploration_casa.launch  frontier_exploration_inc.launch  frontier_exploration_leo.launch  move_base_cave_new.launch  move_base_intel.launch
maps/: Freiburg101.pgm  Freiburg101.world  cave.world  cave.yaml  center_mapping.pgm  center_mapping.yaml  intel.world  lab_intel_furnitures.pgm  map.pgm  map.yaml  mapping_tunnel_subject_1.pgm  mapping_tunnel_subject_1.yaml  parking_lot.pgm  parking_lot.yaml
maps/Room_Segmentation/test_maps/: Freiburg52_scan.pgm
maps/test_maps/: 889_05.yaml  SFU_1200x615.yaml  SRI-AIC-kwing.yaml  fr079_maps_gridmap.yaml  frieburg.yaml  hospital.yaml  hospital_section.yaml  mbicp.yaml  sal2.yaml
src/: dude_ros.cpp  evaluation.cpp  evaluation2.cpp  inc_dude.cpp  inc_dude2.cpp  inc_dude_first_class.cpp  inc_dude_no_class.cpp
